--- a/app/src/main/res/layout/fragment_stake_earth.xml
+++ b/app/src/main/res/layout/fragment_stake_earth.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@android:color/white"
-    android:padding="16dp">
+    android:background="@android:color/white">
 
     <!-- Header -->
     <TextView
@@ -15,6 +14,8 @@
         android:textStyle="bold"
         android:textColor="@color/primary_blue"
         android:gravity="center"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="20dp" />
 
     <!-- Tab Layout using Material Design -->
